tests/errors/poisoning/undefined-name.fn
---
Description: Reference to an undefined name
Expected: FN3204
---

type Program
{
    static fn Main -> i32
    {
        var x = totally_undefined
        return 0
    }
}
